# allspark

./: LICENSE  README.md  pyproject.toml
allspark/layers/: attention.py  ffn.py  positional_encoding.py
allspark/models/: transformer.py
allspark/utils/: positional_encoding.py
